--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,7 +60,8 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".MyServiceActivity"
-            android:label="@string/title_activity_my_service"></activity>
+            android:label="@string/title_activity_my_service" />
+        <activity android:name=".AddChildActivity"></activity>
     </application>
 
 </manifest>
