--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,7 @@ dependencies {
     compile 'com.android.support:cardview-v7:25.0.0'
     compile 'com.android.support:recyclerview-v7:25.0.0'
 
-
+    compile 'com.roughike:bottom-bar:2.1.1'
 
     testCompile 'junit:junit:4.12'
 }
