--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -70,6 +70,9 @@
         <activity
             android:name=".AddNumberActivity"
             android:screenOrientation="portrait" />
+        <activity
+            android:name=".SearchPlaceActivity"
+            android:screenOrientation="portrait" />
 
         <activity android:name=".AddChildActivity"></activity>
     </application>
